--- a/m-tourisme/src/MTLBundle/Resources/views/Default/footerActu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/footerActu.html.twig
@@ -1,11 +1,11 @@
 <footer id="background">
     <div class="container-fluid footer">
         <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                <!-- Button modal Crédit -->
-                <a class="lienFooter" href="#myModal1" data-toggle="modal" data-target="#myModal1">Crédits</a><br/>
-                <!-- Modal Crédit-->
-                <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="col-xs-4">
+                <!-- Button modal Crédits -->
+                <a class="lienFooter" href="#myModal2" data-toggle="modal" data-target="#myModal2">Crédits</a><br/>
+                <!-- Modal Crédits-->
+                <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
@@ -34,9 +34,9 @@
                     </div>
                 </div>
                 <!-- Button modal Mentions légales-->
-                <a class="lienFooter" href="#myModal" data-toggle="modal" data-target="#myModal">Mentions légales</a>
+                <a class="lienFooter" href="#myModal3" data-toggle="modal" data-target="#myModal3">Mentions légales</a>
                 <!-- Modal Mentions Légales-->
-                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal fade" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
@@ -87,14 +87,9 @@
                 </div>
             </div>
 
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                <a class="lienFooter" href="#ancreMetier" id="metier">Notre métier</a><br/>
-                <a class="lienFooter" href="#ancreProduit" id="produit">Géomotifs</a><br/>
-                <a class="lienFooter" href="#ancreActu" id="actu">Actualités</a><br/>
-                <a class="lienFooter" href="#ancreForm" id="nousContacter">Nous contacter</a>
+            <div class=" col-xs-2"></div>
 
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+            <div class=" col-xs-4 col-xs-offset-2">
                 <p>Réalisé par :<br/></p>
                 <a class="lienFooter" href="http://www.wildcodeschool.fr/" target="_blank">Wild Code School</a>
             </div>
