--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -67,12 +67,15 @@
     </div>
     <div class="row citation">
         <div class="col-lg-12">
-            <p class="citationLeft">"GéoMOTifs, une chasse aux décors ludique <strong class="motAccroche">touristique</strong> et <strong class="motAccroche">culturelle</strong> 100% originale"</p>
+            <p class="citationLeft"><cite><q>GéoMOTifs, une chasse aux décors ludique <strong
+                        class="motAccroche">touristique</strong> et <strong class="motAccroche">culturelle</strong>
+                    100% originale</q></cite></p>
         </div>
     </div>
     <div class="row citation">
         <div class="col-lg-12">
-            <p class="citationRight">"Le <strong class="motAccroche">Géocaching</strong> des mots et des formes"</p>
+            <p class="citationRight"><cite><q>Le <strong class="motAccroche">Géocaching</strong> des mots et des
+                    formes</q></cite></p>
         </div>
     </div>
     <hr class="separe">
