--- a/m-tourisme/app/Resources/views/base.html.twig
+++ b/m-tourisme/app/Resources/views/base.html.twig
@@ -10,6 +10,7 @@ appliqués au tourisme et à la culture - Orléans Loiret (45)">
 architecture, geomotifs, details, geocaching">
     <meta name="robots" content="index, follow">
     <meta name="revisit-after" content="1 month">
+    <meta name=viewport content="width=device-width, initial-scale=1">
 
         <!-- FavIcon -->
     <link rel="icon" type="image/png" href="{{ asset('image/favicon.png')}}" />
